<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#000000"
              android:paddingLeft="17dp"
              android:paddingRight="17dp"
        >

    <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="10dp"
            />

    <EditText
            android:id="@+id/accountEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            />

    <EditText
            android:id="@+id/accountPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"
            />

    <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_account"
            android:padding="10dp"/>

    <TextView android:id="@+id/alreadyMember"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:padding="5dp"
              android:gravity="center"
              android:text="@string/already_member"/>
</LinearLayout>

